--- a/src/components/portfolioBlock.scss
+++ b/src/components/portfolioBlock.scss
@@ -170,7 +170,7 @@
 
     &__image {
       flex-shrink: 0;
-      width: 255px;
+      width: 280px;
     }
 
     &__technologies {
@@ -207,8 +207,8 @@
     width: 1060px;
 
     &__image {
-      height: 275px;
-      width: 275px;
+      height: 315px;
+      width: 315px;
     }
 
     &__data {
