--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,7 +19,7 @@ body, html {
 .h1 {
   color: $color-black;
   font-family: $font-primary;
-  font-size: 17px;
+  font-size: 29px;
   letter-spacing: 1.5px;
 }
 
